# noir_pairing

./: .gitignore  Nargo.toml  README.md
example/: Nargo.toml
example/src/: main.nr
lib/: Nargo.toml
lib/src/: BNfp12.nr  BNfp2.nr  BNfp6.nr  BNg1.nr  BNg2.nr  EXP_mod.nr  Mod_p12m1_Params.nr  fp12.nr  fp12exp.nr   fp2.nr  fp6.nr  g1.nr  g2.nr  helpers.nr  lib.nr  pairing.nr
lib/src/bls/: fp12.nr  fp2.nr  fp6.nr  g1.nr  g2.nr  mod.nr  pairing.nr
lib/src/bn/: constants.nr  exp_mod.nr  fp12.nr  fp2.nr  fp6.nr  g1.nr  g2.nr  mod.nr  mod_p12m1.nr  pairing.nr
lib/src/test/: mod.nr  pairing_test.nr
oracle/: Cargo.toml
oracle/src/: foreign_call.rs  handlers.rs  main.rs  ops.rs
src/: fp12.nr  fp2.nr  fp6.nr  lib.nr  main.nr  pairings.nr
