[package]
name = "rust_extension_fields"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-ff = { version = "0.4.0"}
ark-std = "0.4.0"
ark-test-curves = { version = "0.4.0", features = ["bls12_381_curve"] }
ark-ec = "0.4.0"
ark-bn254 = "0.4.0"
ark-grumpkin = "0.5.0"
num-bigint = "0.4.4"
# For the server
anyhow = "1"
# hyper = "1.5.0"
jsonrpsee = { version = "0.24.7", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
serde = "1.0.213"
serde_json = "1.0.132"
tokio = "1.41.0"
tokio-stream = { version = "0.1.16", features = ["sync"] }
# tower = { version = "0.4.13", features= ["full"]} 
# tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
num-traits = "0.2.19" 